Fix incompatibility on old version Firefox

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -385,7 +385,7 @@ tab-item.duplicating tab-item-substance {
 }
 
 tab-item:not(.pinned).collapsed.collapsed-completely {
-  visibility: collapse;
+  visibility: hidden;
 }
 
 tab-item.duplicating,
